swapped ci back to just luarocks make on windows

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,8 +59,7 @@ jobs:
       - name: Install tree-sitter-cli via LuaRocks
         run: |
           .\lua_install\bin\activate
-          luarocks install luarocks-build-tree-sitter-cli --dev
-          luarocks make --deps-mode none
+          luarocks make
 
       - name: Try running tree-sitter
         run: |
